fix terms link z-index

--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -89,6 +89,8 @@
 		color: $textcolor;
 		font-size: 12px;
 		text-decoration: underline;
+		position: relative;
+		z-index: 5;
 
 		@include media('<=tablet') {
 			display: none;
